# ChangeLog for net-libs/courier-authlib
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/courier-authlib/ChangeLog,v 1.32 2005/03/17 21:04:33 swtaylor Exp $

  17 Mar 2005; Scott W Taylor <swtaylor@gentoo.org>
  courier-authlib-0.53.ebuild, courier-authlib-0.54.ebuild,
  courier-authlib-0.54.20050224.ebuild, courier-authlib-0.55.ebuild:
  install mysql readme file for pgsql users

  15 Mar 2005; Scott W Taylor <swtaylor@gentoo.org>
  -courier-authlib-0.52-r1.ebuild, courier-authlib-0.53.ebuild,
  courier-authlib-0.54.ebuild, courier-authlib-0.54.20050224.ebuild,
  courier-authlib-0.55.ebuild:
  change vpopmail detection for #85391

*courier-authlib-0.55 (04 Mar 2005)

  04 Mar 2005; Scott W Taylor <swtaylor@gentoo.org>
  +courier-authlib-0.55.ebuild:
  bump

*courier-authlib-0.54.20050224 (25 Feb 2005)

  25 Feb 2005; Scott W Taylor <swtaylor@gentoo.org>
  +courier-authlib-0.54.20050224.ebuild:
  bump. adds cram-sha256

*courier-authlib-0.54 (13 Feb 2005)

  13 Feb 2005; Scott W Taylor <swtaylor@gentoo.org>
  +courier-authlib-0.54.ebuild:
  errata bump

  04 Feb 2005; Scott W Taylor <swtaylor@gentoo.org>
  files/courier-authlib-initd:
  add "provide authdaemond" to init script

  31 Jan 2005; Scott W Taylor <swtaylor@gentoo.org>
  courier-authlib-0.52-r1.ebuild, courier-authlib-0.53.ebuild:
  changed sed calls for more consistent edits.
  make sure userdb is found and migrated
  call makeuserdb after the install, if userdb exists

  30 Jan 2005; Scott W Taylor <swtaylor@gentoo.org>
  courier-authlib-0.52-r1.ebuild, courier-authlib-0.53.ebuild:
  mostly cosmetic changes. also puts authldap.schema in /etc/openldap/schema/

  30 Jan 2005; Scott W Taylor <swtaylor@gentoo.org>
  courier-authlib-0.52-r1.ebuild:
  initial stable keywording

*courier-authlib-0.53 (30 Jan 2005)

  30 Jan 2005; Scott W Taylor <swtaylor@gentoo.org>
  +courier-authlib-0.53.ebuild:
  bump to 0.53
