@@ -1,6 +1,11 @@
 # ChangeLog for net-libs/courier-authlib
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/courier-authlib/ChangeLog,v 1.32 2005/03/17 21:04:33 swtaylor Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/courier-authlib/ChangeLog,v 1.33 2005/03/19 22:52:57 swtaylor Exp $
+
+  19 Mar 2005; Scott W Taylor <swtaylor@gentoo.org>
+  courier-authlib-0.53.ebuild, courier-authlib-0.54.ebuild,
+  courier-authlib-0.54.20050224.ebuild, courier-authlib-0.55.ebuild:
+  bash cleanup
 
   17 Mar 2005; Scott W Taylor <swtaylor@gentoo.org>
   courier-authlib-0.53.ebuild, courier-authlib-0.54.ebuild,
